--- a/config.toml
+++ b/config.toml
@@ -27,8 +27,6 @@ disableSitemap = false
 disable404     = false
 disableHugoGeneratorInject = true
 
-
-
 pluralizeListTitles = false
 paginate = 6
 
@@ -62,7 +60,7 @@ paginate = 6
 # Metadata mostly used in document's head
   description = " Monitoring social media content reachability worldwide"
   keywords = "monitor, socials, reachability, apps, makhno"
-  copyright= "2020 Workflow, Inc. All rights reserved."
+  copyright= "2023 Tracking Exposed. All rights reserved."
   images = ["img/default.png"]
 
 # Set disableReadOtherPosts to true in order to hide the links to other posts.
@@ -76,18 +74,15 @@ paginate = 6
   justifyContent = false
   contentTypeName = "blog"
  
-
 # Colors for favicons
   [params.favicon.color]
     mask = ""
     msapplication = ""
 
 # Social icons
-  
   [[params.social]]
     name = "twitter"
     url  = "#"
-
   [[params.social]]
     name = "github"
     url  = "#"
@@ -95,13 +90,12 @@ paginate = 6
 # Menus - English
 [languages]
    
-   [languages.en]
+   [languages.en.params]
     languageName = "English"
     subtitle  = ""
     contentDir   = "content"
     weight    = 1
     copyright = 'Some rights reserved. Unless otherwise noted, content on this page is under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener" title="License"> Creative Commons license</a>.'
-  
   
   # Main navigation Menu
   [[languages.en.menu.main]]
@@ -116,13 +110,11 @@ paginate = 6
     url        = "/methodology/"
     weight     = "2"
 
-
   [[languages.en.menu.main]]
     identifier = "about"
     name       = "About"
     url        = "/about/"
     weight     = "3"
-
 
 [privacy]
   [privacy.instagram]
